hphp/hack/test/typecheck/fc_enum_16.php.exp
File "fc_enum_16.php", line 3, characters 12-19:
Enums must be int or string, not an array key (int/string) (Typing[4024])
