hphp/hack/test/typecheck/fc_enum_16.php
<?hh // partial

enum Foo: arraykey {}
